fix(package): make @fluent/bundle a peer dependency and @fluent/dedent a dev dependency
fix #43

--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -7,7 +7,9 @@
     "build": "parcel build public/index.html"
   },
   "dependencies": {
-    "fluent-vue": "2.3.0",
+    "@fluent/bundle": "^0.15.0",
+    "@fluent/dedent": "^0.1.0",
+    "fluent-vue": "2.4.0",
     "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
