--- a/typescript/package.json
+++ b/typescript/package.json
@@ -15,5 +15,6 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.0.0",
     "parcel-bundler": "^1.12.3"
-  }
+  },
+  "browserslist": ["last 1 Chrome versions"]
 }
