--- a/webpack/package.json
+++ b/webpack/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "@fluent/bundle": "^0.16.0",
     "@fluent/dedent": "^0.3.0",
-    "fluent-vue": "link:../../packages/fluent-vue"
+    "fluent-vue": "../../packages/fluent-vue",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
-    "fluent-vue-loader": "link:../../packages/fluent-vue-loader",
+    "fluent-vue-loader": "../../packages/fluent-vue-loader",
     "html-webpack-plugin": "^4.3.0",
     "vue-loader": "^15.9.3",
     "webpack": "^5.0.0-beta.28",
