--- a/webpack/package.json
+++ b/webpack/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fluent/bundle": "^0.16.0",
     "@fluent/dedent": "^0.3.0",
+    "@vue/composition-api": "^v1.0.0-beta.15",
     "fluent-vue": "../../packages/fluent-vue",
     "vue": "^2.6.12"
   },
@@ -16,6 +17,7 @@
     "fluent-vue-loader": "../../packages/fluent-vue-loader",
     "html-webpack-plugin": "^4.3.0",
     "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.0.0-beta.28",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
