--- a/vite/package.json
+++ b/vite/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@fluent/bundle": "^0.16.0",
-    "fluent-vue": "../../packages/fluent-vue",
+    "fluent-vue": "file:../../packages/fluent-vue",
     "vue": "^3.0.0"
   },
   "devDependencies": {
