--- a/webpack/package.json
+++ b/webpack/package.json
@@ -10,11 +10,11 @@
     "@fluent/bundle": "^0.16.0",
     "@fluent/dedent": "^0.3.0",
     "@vue/composition-api": "^v1.0.0-beta.15",
-    "fluent-vue": "../../packages/fluent-vue",
+    "fluent-vue": "file:../../packages/fluent-vue",
     "vue": "^2.6.12"
   },
   "devDependencies": {
-    "fluent-vue-loader": "../../packages/fluent-vue-loader",
+    "fluent-vue-loader": "file:../../packages/fluent-vue-loader",
     "html-webpack-plugin": "^4.3.0",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
