--- a/vue-3-vue-cli/package.json
+++ b/vue-3-vue-cli/package.json
@@ -14,8 +14,8 @@
     "fluent-vue": "file:../../packages/fluent-vue"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.9",
-    "@vue/cli-service": "~4.5.9",
+    "@vue/cli-plugin-babel": "~5.0.0-alpha.0",
+    "@vue/cli-service": "~5.0.0-alpha.0",
     "@vue/compiler-sfc": "^3.0.2",
     "fluent-vue-loader": "file:../../packages/fluent-vue-loader"
   },
