--- a/vite/package.json
+++ b/vite/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.0.2"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^1.1.4",
     "@vue/compiler-sfc": "^3.0.2",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^2.0.2"
   }
 }
