--- a/vue-3-vue-cli/package.json
+++ b/vue-3-vue-cli/package.json
@@ -10,13 +10,13 @@
     "@fluent/bundle": "^0.16.0",
     "@fluent/dedent": "^0.3.0",
     "core-js": "^3.8.1",
-    "vue": "^3.0.2",
-    "fluent-vue": "file:../../packages/fluent-vue"
+    "fluent-vue": "file:../../packages/fluent-vue",
+    "vue": "^3.0.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0-alpha.0",
-    "@vue/cli-service": "~5.0.0-alpha.0",
-    "@vue/compiler-sfc": "^3.0.2",
+    "@vue/cli-plugin-babel": "~5.0.0-alpha.4",
+    "@vue/cli-service": "~5.0.0-alpha.4",
+    "@vue/compiler-sfc": "^3.0.5",
     "fluent-vue-loader": "file:../../packages/fluent-vue-loader"
   },
   "browserslist": [
