--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -2,17 +2,19 @@
   "compilerOptions": {
     "target": "es5",
     "strict": true,
+    "noEmit": true,
+    "lib": [
+      "ES2015",
+      "DOM",
+      "ESNext"
+    ],
     "module": "es2015",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.vue"
-  ],
-  "files": [
-    "src/vue-shims.d.ts"
-  ],
-  "exclude": [
-    "node_modules"
+    "src"
   ]
 }
