--- a/webpack/package.json
+++ b/webpack/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@fluent/bundle": "^0.16.1",
     "@fluent/dedent": "^0.3.0",
-    "@vue/composition-api": "^v1.0.0-rc.3",
+    "@vue/composition-api": "^1.0.0-rc.3",
     "fluent-vue": "file:../../packages/fluent-vue",
     "vue": "~2.6.12"
   },
@@ -18,7 +18,7 @@
     "html-webpack-plugin": "^5.0.0-beta.1",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.31.0",
+    "webpack": "^5.35.1",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.2"
   },
