--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -1,7 +1,6 @@
 {
   "name": "hello-world-example",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
     "start": "parcel serve public/index.html",
     "build": "parcel build public/index.html"
@@ -10,12 +9,12 @@
     "@fluent/bundle": "^0.16.1",
     "@fluent/dedent": "^0.3.0",
     "@vue/composition-api": "^1.0.0-rc.8",
-    "fluent-vue": "file:../../packages/fluent-vue",
-    "vue": "~2.6.12",
+    "fluent-vue": "^3.0.0-beta.9",
+    "vue": "^2.6.12",
     "vue-hot-reload-api": "^2.3.3"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^3.0.0",
+    "vue-template-compiler": "^2.6.12",
     "parcel-bundler": "^1.12.3"
   },
   "browserslist": [
