--- a/vue-3-vue-cli/package.json
+++ b/vue-3-vue-cli/package.json
@@ -1,27 +1,24 @@
 {
   "name": "vue-3-vue-cli",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "start": "vue-cli-service serve"
   },
   "dependencies": {
     "@fluent/bundle": "^0.16.1",
     "@fluent/dedent": "^0.3.0",
     "core-js": "^3.12.1",
-    "fluent-vue": "file:../../packages/fluent-vue",
-    "vue": "^3.0.5"
+    "fluent-vue": "^3.0.0-beta.9",
+    "vue": "^3.0.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0-alpha.5",
-    "@vue/cli-service": "~5.0.0-alpha.5",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-service": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.11",
-    "fluent-vue-loader": "file:../../packages/fluent-vue-loader"
+    "fluent-vue-loader": "^3.0.0-beta.9"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
+    "last 1 Chrome versions"
   ]
 }
