--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,20 +1,19 @@
 {
   "name": "webpack-example",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
     "start": "webpack serve",
-    "build": "webpack"
+    "build": "webpack --mode=production"
   },
   "dependencies": {
     "@fluent/bundle": "^0.16.1",
     "@fluent/dedent": "^0.3.0",
     "@vue/composition-api": "^1.0.0-rc.8",
-    "fluent-vue": "file:../../packages/fluent-vue",
-    "vue": "~2.6.12"
+    "fluent-vue": "^3.0.0-beta.9",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
-    "fluent-vue-loader": "file:../../packages/fluent-vue-loader",
+    "fluent-vue-loader": "^3.0.0-beta.9",
     "html-webpack-plugin": "^5.0.0-beta.1",
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.12",
