Cleanup examples and add typescript testing to CI (#609)

--- a/vue-2-webpack/package.json
+++ b/vue-2-webpack/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webpack-example",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "start": "webpack serve",
     "build": "webpack --mode=production"
