--- a/vue-3-parcel/package.json
+++ b/vue-3-parcel/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "hello-world-example",
+  "name": "parcel-example",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "start": "parcel serve public/index.html",
     "build": "parcel build public/index.html"
@@ -8,14 +9,12 @@
   "dependencies": {
     "@fluent/bundle": "^0.16.1",
     "@fluent/dedent": "^0.3.0",
-    "@vue/composition-api": "^1.0.0-rc.8",
     "fluent-vue": "^3.0.0-beta.9",
-    "vue": "^2.6.12",
-    "vue-hot-reload-api": "^2.3.3"
+    "vue": "^3.0.11"
   },
   "devDependencies": {
-    "vue-template-compiler": "^2.6.12",
-    "parcel-bundler": "^1.12.5"
+    "@parcel/transformer-vue": "2.0.0-beta.3.1",
+    "parcel": "2.0.0-beta.3.1"
   },
   "browserslist": [
     "last 1 Chrome versions"
