--- a/vue-2-vite-typescript/package.json
+++ b/vue-2-vite-typescript/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
+    "rollup-plugin-fluent-vue": "^3.0.0-beta.16",
     "typescript": "^4.3.5",
     "vite": "^2.4.3",
     "vite-plugin-vue2": "^1.7.3",
