--- a/vue-3-vite-typescript/package.json
+++ b/vue-3-vite-typescript/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.1.5",
+    "rollup-plugin-fluent-vue": "^3.0.0-beta.16",
     "typescript": "^4.3.5",
     "vite": "^2.4.3",
     "vue-tsc": "^0.2.2"
