--- a/vue-2-webpack/package.json
+++ b/vue-2-webpack/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode=development",
     "build": "webpack --mode=production"
   },
   "dependencies": {
