--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,10 @@ jobs:
         uses: actions/checkout@v2.3.5
       - name: Setup Node.js
         uses: actions/setup-node@v2.4.1
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.x.x
 
       - name: Install
         run: pnpm i
