--- a/vue-2-webpack/package.json
+++ b/vue-2-webpack/package.json
@@ -14,9 +14,10 @@
     "vue": "2.6.14"
   },
   "devDependencies": {
-    "fluent-vue-loader": "3.0.1",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "5.5.0",
-    "vue-loader": "15.9.8",
+    "unplugin-fluent-vue": "0.0.2",
+    "vue-loader": "15.10.0",
     "vue-template-compiler": "2.6.14",
     "webpack": "5.65.0",
     "webpack-cli": "4.9.1",
