--- a/vue-3-vite-typescript/package.json
+++ b/vue-3-vite-typescript/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "2.0.1",
     "@vue/compiler-sfc": "3.2.26",
-    "rollup-plugin-fluent-vue": "3.0.0",
+    "unplugin-fluent-vue": "0.0.3",
     "typescript": "4.5.4",
     "vite": "2.7.10",
     "vue-tsc": "0.30.2"
