--- a/vue-3-vue-cli/package.json
+++ b/vue-3-vue-cli/package.json
@@ -14,10 +14,11 @@
     "vue": "3.2.26"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.5.15",
-    "@vue/cli-service": "4.5.15",
+    "@babel/core": "7.18.9",
+    "@vue/cli-plugin-babel": "5.0.8",
+    "@vue/cli-service": "5.0.8",
     "@vue/compiler-sfc": "3.2.26",
-    "fluent-vue-loader": "3.0.1"
+    "unplugin-fluent-vue": "0.0.3"
   },
   "browserslist": [
     "last 1 Chrome versions"
