--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,18 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base",
     "group:allNonMajor"
+  ],
+  "packageRules": [
+    {
+      "groupName": "Vite",
+      "matchPackagePrefixes": [
+        "@vite/"
+      ],
+      "matchPackageNames": [
+        "vite"
+      ]
+    }
   ]
 }
