Don't update vue major verions

--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,16 @@
       "matchPackageNames": [
         "vite"
       ]
+    },
+    {
+      "matchPackageNames": [
+        "vue",
+        "fluent-vue-loader"
+      ],
+      "matchUpdateTypes": [
+        "major"
+      ],
+      "enabled": false
     }
   ]
 }
