--- a/nuxt-3/package.json
+++ b/nuxt-3/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@fluent/bundle": "^0.18.0",
-    "fluent-vue": "^3.5.0",
+    "fluent-vue": "^3.5.1",
     "nuxt": "^3.10.3",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "unplugin-fluent-vue": "^1.1.4"
+    "@vue/compiler-core": "^3.4.21",
+    "unplugin-fluent-vue": "^1.3.0"
   }
 }
